# send-mails

./: .env.example  .env.template  .gitignore  README.md  README_photo_survey.md  SETUP.md  export_keys.py  pyproject.toml  run.py  run_eventinfo.py  run_eventinfo_correction.py  run_helfer.py  run_photo_survey.py
Gmail (archive)/: run.py  run_lastinfo.py  run_survey.py
archive/: run_oev.py
data/: 24 Jan 2026 1300 - Rigibeats 2026 - Orders.csv  24 Jan 2026 1300 - Rigibeats 2026 - Orders_eventinfo_sent_2026-01-22_2318.csv  24 Jan 2026 1300 - Rigibeats 2026 - Orders_eventinfo_sent_2026-01-22_2318.xlsx  24 Jan 2026 1300 - Rigibeats 2026 - Orders_feedback_survey_sent_2026-01-27_2229.csv  24 Jan 2026 1300 - Rigibeats 2026 - Orders_feedback_survey_sent_2026-01-27_2229.xlsx  email_list.xlsx
